--- a/prototype/prototypeconclusion.tex
+++ b/prototype/prototypeconclusion.tex
@@ -1,5 +1,8 @@
 \section{Summary}
 
-\todo{fcorreia: algures neste capitulo e/ou no capitulo final de conclusões seria interessante relacionar o teu design com as alternativas que analisaste no cap 4 (cargox, eximchain, origintrail, etc.) }
+%Answer to the final question:
 
-%CHANGE NAME TO SUMMARY
+
+%Untapped fabric+composer potential with multiple channels, endorsement policies, custom consensus algorithms
+
+\todo{fcorreia: algures neste capitulo e/ou no capitulo final de conclusões seria interessante relacionar o teu design com as alternativas que analisaste no cap 4 (cargox, eximchain, origintrail, etc.) }
