Validation chapter finished

--- a/conclusions.tex
+++ b/conclusions.tex
@@ -4,12 +4,12 @@
 
 \section{Overview}
 
-%The chosen framework had the possibility of satisfying the most requirements, out of all the frameworks.
-%Even so, it was concluded that it could only fill the requirements partially, with some important requirements not being fully achievable at the present moment
+The chosen framework had the possibility of satisfying the most requirements, out of all the frameworks.
+Even so, it was concluded that it could only fill the requirements partially, with some important requirements not being fully achievable at the present moment
 
-%Conclusions: If we define that Blockchain being a good architecture for SC means satisfying all the requirements, then it is not a good architecture to replace the current ones in supply chain.
+Conclusions: If we define that Blockchain being a good architecture for SC means satisfying all the requirements, then it is not a good architecture to replace the current ones in supply chain.
 
-%However, this does not mean Blockchain is not useful, since it can still partially fill some important requirements. \textbf{The fact that by itself, it is not good enough to replace other current architectural designs in supply chain does not mean it cannot work together with the current architectures} to fill in some gaps. Blockchain can still be applied as an aid and enhancement to some information system functionalities. For instance, financial transactions was a requirement that was fulfilled and listed very high on the requirements from the survey. No other present architecture uses this functionality, but through Blockchain, it can be implemented.
+However, this does not mean Blockchain is not useful, since it can still partially fill some important requirements. \textbf{The fact that by itself, it is not good enough to replace other current architectural designs in supply chain does not mean it cannot work together with the current architectures} to fill in some gaps. Blockchain can still be applied as an aid and enhancement to some information system functionalities. For instance, financial transactions was a requirement that was fulfilled and listed very high on the requirements from the survey. No other present architecture uses this functionality, but through Blockchain, it can be implemented.
 
 \section{Contributions}
 \todo{fcorreia: I'd expect to see here a list of contributions of your thesis. You do mention them, but a) I think they would be clearer to read as a list, b) you may be currently missing a few. I see at least 3 or 4, for example: a study of important design considerations for SCMSs, a study of important design considerations for blockchains, a prototype, an analysis of the benefits and liabilities of supporting a SCMS with a blockchain}
