--- a/introduction.tex
+++ b/introduction.tex
@@ -5,7 +5,7 @@
 \chapter{Introduction}
 \label{chap:introduction}
 \minitoc \mtcskip \noindent
-
+\todo{pedro:atualizar dissertation structure}
 Consumer demand is growing more than ever, and with it, concerns are raised as to whether the demand can be met in a transparent and trustful way. It is difficult to know where the products we consume come from, and the processes they go through. This leads to the need of transparency in the supply chains as well as the need of an increase in their efficiency, if they are to conform to the market's needs.
 
 %\begin{quote}
