Conclusion overview finished

--- a/conclusions.tex
+++ b/conclusions.tex
@@ -4,12 +4,32 @@
 
 \section{Overview}
 
-The chosen framework had the possibility of satisfying the most requirements, out of all the frameworks.
-Even so, it was concluded that it could only fill the requirements partially, with some important requirements not being fully achievable at the present moment
+All the work and contributions of this dissertation aim towards proving whether the following statement is valid or not: \textbf{\textit{"Blockchain a good architectural design for the Supply Chain Management domain."}}
 
-Conclusions: If we define that Blockchain being a good architecture for SC means satisfying all the requirements, then it is not a good architecture to replace the current ones in supply chain.
+ For this reason, 3 questions were formulated in the problem statement:
+\begin{enumerate}
+    \item \textbf{What supply chain issues, improvements and requirements do the experts really find the most important?}
+    \item \textbf{What is the Blockchain tool or framework most adequate to the development of an architecture that can support these requirements?}
+    \item \textbf{Is it possible to build a feasible architectural design, by using such a tool, to implement all these requirements?}
+\end{enumerate}
+    
+Chapter \ref{chap:survey} provided the answer to the first question. Chapter \ref{chap:prototype} used this answer to provide the answer to the second and third questions, which can now lead to a final conclusion towards the initial statement.
+
+
+\subsection*{Thesis Statement}
+\par We have almost all of the pieces to reach a final conclusion towards the main thesis statement. However, first, the expression "a good architectural design for the SCM domain" needs to be clarified. \textbf{What exactly does it mean for an architectural design to be good for some domain?} 
+
+If we are to compare a new architectural design against other existing designs for that same domain, then a new design could be considered good if it could cover all of the functionalities of the other designs and have some additional ones or be more efficient. But it was already determined that \textbf{the focus of this thesis statement was not to compare this architecture to others, but to evaluate it objectively and not relatively}. Therefore, a good design could be one that objectively covers all of the most important elicited requirements.
+
+\par The chosen framework had the possibility of satisfying the most requirements, out of all the frameworks. Even so, by answering the last question, it was concluded that the proposed design, even while choosing the most convenient tool possible, could only fill the requirements partially, with some important requirements not being fully achievable at the present moment.
+
+
+\emph{Therefore, if a good design is one that must be able to satisfy all of the requirements, then Blockchain is not a good architecture for the supply chain management domain.}
+
 
 However, this does not mean Blockchain is not useful, since it can still partially fill some important requirements. \textbf{The fact that by itself, it is not good enough to replace other current architectural designs in supply chain does not mean it cannot work together with the current architectures} to fill in some gaps. Blockchain can still be applied as an aid and enhancement to some information system functionalities. For instance, financial transactions was a requirement that was fulfilled and listed very high on the requirements from the survey. No other present architecture uses this functionality, but through Blockchain, it can be implemented.
+
+
 
 \section{Contributions}
 \todo{fcorreia: I'd expect to see here a list of contributions of your thesis. You do mention them, but a) I think they would be clearer to read as a list, b) you may be currently missing a few. I see at least 3 or 4, for example: a study of important design considerations for SCMSs, a study of important design considerations for blockchains, a prototype, an analysis of the benefits and liabilities of supporting a SCMS with a blockchain}
