--- a/prototype/prototypeconclusion.tex
+++ b/prototype/prototypeconclusion.tex
@@ -1,8 +1,21 @@
 \section{Summary}
 
 %Answer to the final question:
+The whole chapter focused on building a list of requirements, designing a system, implementing it and validating the work done. All to answer the question: \textit{"Is it possible to build a feasible architectural design, by using such a tool, to implement all these requirements?"}.
 
+Thus, the final results and validation are essential to the answer and they are the ultimate goals, but the whole process of getting there by building the requirements, the design, and the implementation also provides important contributions.
+
+
+\textbf{Through the analysis of the results, the direct answer to the posed questions is: \textit{No}.} It is not possible to use the Hyperledger Composer and Fabric frameworks to satisfy \textbf{ALL} of the requirements through the built design, mainly because of limitations in the software, and not because of the architectural design itself.
+
+Even though the answer to the posed question was negative based on the results from this dissertation, the fact remains that it was still possible to implement most of the requirements. Therefore, if the question is instead changed to \textit{"Is it possible to build a feasible architectural design, by using such a tool, to implement \textbf{MOST} of these requirements?"}, the answer turns into a \textbf{YES}. 
+
+The design itself is feasible to be implemented, and even though the tool has some limitations, most of the functionalities and quality requirements were indeed satisfied. Both the design and the tool are not without some merit and it would not be fair to simply say that such an architectural design, based on Blockchain, is not feasible or usable simply because it does not satisfy an extensive list of requirements.
 
 %Untapped fabric+composer potential with multiple channels, endorsement policies, custom consensus algorithms
 
 \todo{fcorreia: algures neste capitulo e/ou no capitulo final de conclusões seria interessante relacionar o teu design com as alternativas que analisaste no cap 4 (cargox, eximchain, origintrail, etc.) }
+
+\todo{pedro: yes, analyse other tools; they also dont fill all the requirements!}
+
+Most of the projects analyzed in the state-of-the-art, thought they use a multitude of different frameworks and custom networks, also do not focus on satisfying all of the requirements, but mostly a subset of them. Most of the projects specialize only in 1 problem area, like traceability, instead of going for an all-rounded concept.
