--- a/problemstatement.tex
+++ b/problemstatement.tex
@@ -90,7 +90,7 @@ The main objective has already been defined: to improve the security traits, tra
 %TODO: SHOULD IT BE IN QUESTION FORM, OR AFFIRMATION?
 Therefore, the main statement that this thesis defends is: 
 
-\par \textbf{\textit{"Is Blockchain a good architectural design for the Supply Chain Management domain?"}}
+\par \textbf{\textit{"Blockchain a good architectural design for the Supply Chain Management domain."}}
 
 \todo{fcorreia: uma thesis statement normalmente é uma afirmação e não uma pergunta. eu reescreveria desta forma, diz-me o que achas:\\
 Therefore, the thesis that underlies this work is that:\\
@@ -104,8 +104,10 @@ Thus, the questions that need to be answered first, in order to reach a conclusi
 \begin{enumerate}
 \item \textbf{What supply chain issues, improvements and requirements do the experts really find the most important?}
 \item \textbf{What is the Blockchain tool or framework most adequate to the development of an architecture that can support these requirements?}
-\item \textbf{Is it possible to build a feasible architectural design, by using such a tool implement all these requirements?}
+\item \textbf{Is it possible to build a feasible architectural design, by using such a tool, to implement all these requirements?}
 \end{enumerate}
+
+\todo{pedro: compor a 3a pergunta, em alguns sitios falta virgula e o "to"}
 
 These questions are sequential, meaning that, in order to answer one of them, we have to answer the previous question. Only in the end can we reach a definitive conclusion, though the sub-conclusions are also interesting to analyze and a contribute themselves to this area.
 
@@ -163,7 +165,7 @@ In conclusion, the goal of the survey is to validate some assumptions and direct
 
 %TODO: should the verbs be in the past, present or future here?
 Having answered the question about which are the most important aspects of supply chain to focus on improving, this section is focused on applying this knowledge to answer the other two final questions: \textbf{\textit{"What is the Blockchain tool or framework most adequate to the development of an architecture that can support these requirements?"}} and 
-\textbf{\textit{"Is it possible to build a feasible architectural design, by using such a tool implement all these requirements?"}}
+\textbf{\textit{"Is it possible to build a feasible architectural design, by using such a tool, to implement all these requirements?"}}
 
 \todo{fcorreia: eu evitaria o "Having answered ...", porque isto se faz normalmente de forma mais iterativa e até porque na realidade a coisa não aconteceu de forma assim tão sequêncial como a frase dá a entender. A frase pode comçar diretamente com "this section is focused on applying the knowledge of which are the most important aspects ...."}
 
