--- a/conclusions.tex
+++ b/conclusions.tex
@@ -17,9 +17,9 @@ Chapter \ref{chap:survey} provided the answer to the first question. Chapter \re
 
 
 \subsection*{Thesis Statement}
-\par We have almost all of the pieces to reach a final conclusion towards the main thesis statement. However, first, the expression "a good architectural design for the SCM domain" needs to be clarified. \textbf{What exactly does it mean for an architectural design to be good for some domain?} 
+\par We have almost all of the pieces to reach a final conclusion towards the main thesis statement. However, there is still the need for the expression "a good architectural design for the SCM domain" to be clarified. \textbf{What exactly does it mean for an architectural design to be good for some domain?} 
 
-If we are to compare a new architectural design against other existing designs for that same domain, then a new design could be considered good if it could cover all of the functionalities of the other designs and have some additional ones or be more efficient. But it was already determined that \textbf{the focus of this thesis statement was not to compare this architecture to others, but to evaluate it objectively and not relatively}. Therefore, a good design could be one that objectively covers all of the most important elicited requirements.
+If we were to compare a new architectural design against other existing designs for that same domain, then a new design could be considered good if it could cover all of the functionalities of the other designs and have some additional ones or be more efficient. But it was already determined that \textbf{the focus of this thesis statement was not to compare this architecture to others, but to evaluate it objectively and not relatively}. Therefore, a good design could be one that objectively covers all of the most important elicited requirements.
 
 \par The chosen framework had the possibility of satisfying the most requirements, out of all the frameworks. Even so, by answering the last question, it was concluded that the proposed design, even while choosing the most convenient tool possible, could only fill the requirements partially, with some important requirements not being fully achievable at the present moment.
 
@@ -27,11 +27,24 @@ If we are to compare a new architectural design against other existing designs f
 \emph{Therefore, if a good design is one that must be able to satisfy all of the requirements, then Blockchain is not a good architecture for the supply chain management domain.}
 
 
-However, this does not mean Blockchain is not useful, since it can still partially fill some important requirements. \textbf{The fact that by itself, it is not good enough to replace other current architectural designs in supply chain does not mean it cannot work together with the current architectures} to fill in some gaps. Blockchain can still be applied as an aid and enhancement to some information system functionalities. For instance, financial transactions was a requirement that was fulfilled and listed very high on the requirements from the survey. No other present architecture uses this functionality, but through Blockchain, it can be implemented.
-
-
+However, this does not mean Blockchain is not useful, since it can still partially fill some important requirements. \textbf{The fact that by itself, it might not good be enough to satisfy all the requirements, does not mean it cannot be used together with the current architectures} to fill in some gaps. Blockchain can still be applied as an aid and enhancement to some information system functionalities. For instance, financial transactions was a requirement that was fulfilled and listed very high on the requirements from the survey. No other present architecture uses this functionality, but through Blockchain, it can be implemented.
 
 \section{Contributions}
+It is important that a conclusion was reached, but it is also important to look at what work was done to reach that conclusion. The whole process of originating the answers to the questions that support the conclusion also generated useful contributions. 
+
+These contributions might be useful for future research:
+
+\begin{itemize}
+	\item Survey Results and Analysis of
+	\begin{itemize}
+		\item List of the most important supply chain issues, supply chain points of improvement, information system features that a supply chain needs and the most wanted \textbf{blockchain use cases for supply chain management}.
+		\item List of requirements for a blockchain-based supply chain management software, grouped by area.
+	\end{itemize}
+	\item List of Framework requirements and framework comparison.
+	\item Architectural design
+	\item Prototype
+\end{itemize}
+
 \todo{fcorreia: I'd expect to see here a list of contributions of your thesis. You do mention them, but a) I think they would be clearer to read as a list, b) you may be currently missing a few. I see at least 3 or 4, for example: a study of important design considerations for SCMSs, a study of important design considerations for blockchains, a prototype, an analysis of the benefits and liabilities of supporting a SCMS with a blockchain}
 
 
