Main content of the thesis finished

--- a/conclusions.tex
+++ b/conclusions.tex
@@ -35,42 +35,58 @@ It is important that a conclusion was reached, but it is also important to look 
 These contributions might be useful for future research:
 
 \begin{itemize}
-	\item Survey Results and Analysis of
+	\item \textbf{Background Analysis} 
 	\begin{itemize}
-		\item List of the most important supply chain issues, supply chain points of improvement, information system features that a supply chain needs and the most wanted \textbf{blockchain use cases for supply chain management}.
-		\item List of requirements for a blockchain-based supply chain management software, grouped by area.
+		\item Analysis of the issues and challenges that supply chain management functionalities faces
+		\item Analysis and comparison of different blockchain development frameworks and networks
+		\item Research on important design considerations for SCM and for blockchain
 	\end{itemize}
-	\item List of Framework requirements and framework comparison.
-	\item Architectural design
-	\item Prototype
+	\item \textbf{Survey Research and Analysis of Expert Opinions}
+	\begin{itemize}
+		\item Validation by the experts of the most important supply chain issues, supply chain points of improvement, information system features that a supply chain needs and the most wanted blockchain use cases for supply chain management
+		\item List of requirements for a blockchain-based supply chain management software, grouped by area
+	\end{itemize}
+	\item \textbf{Software Engineering Artifacts}
+	\begin{itemize}
+		\item Organized List of Framework Requirements and Framework Evaluation
+		\item Requirements Specification document
+		\item Architectural design, including a Hyperledger Composer model, a Prototype implementation and a validation of the feasibility of the requirements
+	\end{itemize}
+	\item \textbf{Analysis of limitations of the Hyperledger Composer framework}
+	\item \textbf{Final considerations and analysis of the feasibility of using Blockchain as an architectural design for Supply Chain Management}
 \end{itemize}
 
-\todo{fcorreia: I'd expect to see here a list of contributions of your thesis. You do mention them, but a) I think they would be clearer to read as a list, b) you may be currently missing a few. I see at least 3 or 4, for example: a study of important design considerations for SCMSs, a study of important design considerations for blockchains, a prototype, an analysis of the benefits and liabilities of supporting a SCMS with a blockchain}
+%{fcorreia: I'd expect to see here a list of contributions of your thesis. You do mention them, but a) I think they would be clearer to read as a list, b) you may be currently missing a few. I see at least 3 or 4, for example: a study of important design considerations for SCMSs, a study of important design considerations for blockchains, a prototype, an analysis of the benefits and liabilities of supporting a SCMS with a blockchain}
 
 
 \section{Difficulties}
-%IMPORTANT
-%Maybe move to the approach
-Mention the initial thing we wanted to do: to use some metrics to compare our implementation with others from the state of the art.
-Mention why we could not do it: NO ONE ANSWERED WITH THE METRICS :( Contacts did not go through as expected!
 
-% Nao ha grande baseline para comparar; há que restringir o ambito e o estudo foi feito para ser baseado nestas consideraçoes; 
+The work done in this research was not always linear, even though the logic is made to be linear. Since the beggining of the research, questions arised as to what points should be focused, what work would make the contributions important enough to reach a good conclusion. 
 
-%These conclusions are for PDIS; so they will close this delivery and may anticipate the expected results of the dissertation. Include the tasks and a Gantt diagram with the plan.
-The dissertation focuses on finding out how applicable Blockchain is to the supply chain industry and to SCM, and there are many variables to consider. Many companies have already started working on projects similar to what is trying to be accomplished here, though with a higher focus on financial benefits than on the research itself (many of the examples given were of companies using Ethereum and its tokens). These solutions have not yet been proved and are also taking their initial steps. The main focus of this dissertation is to develop a proof-of-concept that indeed Blockchain can improve SCM in some form, and also give an insight on how this might be achieved. 
+One of the initial difficulties that most impacted the research was the lack of a quantitative baseline to compare the proposed project to. There are many other projects that attempt to, in one way or another, enhance the capabilities of supply chain by applying blockchain, some even showcased in the literature review. However, none had publicly available efficiency metrics that could be used for this project to be compared to. A lot of developers and companies were contacted to try to collect more data from the existing projects, to establish a baseline but the contacts did not fall through in a satisfactory way. 
+
+In the same way, some supply chain companies were contacted to the purpose of establishing a quantitative baseline for the needs of supply chain. This could have included, for example, knowing how many products a company shipped per a certain ammount of time, since this data could lead to interesting conclusions. But none had the specific data needed or the interest to maintain a continuous working relationship for the purposes of this research.
+
+Thus, one of the biggest difficulties for this dissertation was the lack of partnerships and difficulty in establishing and maintaining contacts interested in contributing to the research. This was also one of the aspects that a lot of time in this dissertation was put into, without fruitful results to show for the effort done.
+
+
+Another difficulty was that the frameworks used are not very mature. Some had their development abandoned, while others are still in development, with some bugs, and there are always new versions being released, which sometimes changed the way the features worked.
+
+Finally, without a comparison baseline, the survey was developed, as a way to get expert knowledge in a more indirect way. But getting experts to answer the survey was not easy. The expected profile for the participants of the survey was not a common one, and the survey had to be shared through specific channels, often times being completely ignored.
 
 \section{Future Work}
 
-Future work: The work here done was much more introductory in nature, and explored the requirements and their satisfaction as a whole. Additionaly, the maturity of the tools used was questionable. 
+The work here done was much more introductory in nature, and explored the requirements and their satisfaction as a whole. Additionaly, the maturity of the tools used was questionable. This research can be used as the groundwork for more important conclusions and contributions to be reached.
+
 Future work might include:
 \begin{itemize}
 	\item Taking specific requirements from the most important requirements on the list and research on using blockchain to successfully apply them as enhancements:
 	\begin{itemize}
-		\item Financial applications, payments and contractual agreements;
-		\item "Applying Blockchain as a financial alternative in the Supply Chain" could even be a new thesis derived out of this one;
+		\item Financial applications, payments and contractual agreements.
+		\item "Applying Blockchain as a financial alternative in the Supply Chain", for instance, can be a topic of research, among others.
 	\end{itemize}
-	\item Research and attempt to use different frameworks to fulfill the same requirements that were elicited in this dissertation;
-    \item Research on different architectures
+	\item Research and attempt to use different frameworks to fulfill the same requirements that were elicited in this dissertation.
+    \item Build a more complete topological network for the proof-of-concept, thouroughly analyze the performance and compare it to other systems and architectures.
 \end{itemize} 
 
 %Nao usar situaçoes hipoteticas
